# llm-graph-builder

./: .README.md.swp  .env  .gitignore  Hacker-hue-creator  PDF_KG_Neo.ipynb  PROJECT_SUMMARY.md  QUICKSTART_knowledge_extract.md  README.md  README_knowledge_extract.md  SEARCH_FEATURE_README.md  cloudbuild.yaml  deploy.sh  docker-compose.local.yml  docker-compose.yml  example.env  feature.txt  package-lock.json  reports.txt  setup_local_neo4j.sh  start_clean_local.sh  start_dev.sh  test.py
backend/: .env.example  .isort.cfg  Dockerfile  Integration_TestResult_20240718_060027.csv  Integration_TestResult_20240722_063751.csv  LLM_UNIFIED_MODE.md  Makefile  Performance_test.py  Pipfile  README.md  README_MINERU_LOADER.md  URL_SOURCES_EXPLANATION.md  alembic.ini  analyze_url_sources.py  clean_backend_container_residual_files.sh  constraints.txt  dbtest.py  debug_database.py  debug_monitoring_db.py  debug_url_extraction.py  dockerfile  example.env  explain_nil_sources.py  fix_chunk_urls.py  locustperf.py  new_req.txt  pyproject.toml  req.py  req2.py  requirements.txt  requirements_with_versions.txt  risk_assessment_Bill_Gates.json  risk_assessment_Microsoft.json  risk_assessment_OpenAI.json  run_tests.py  score.py  score1.py  setup_backend_container.sh  simple_debug.py  test_adaptive_scoring.py  (+13 more)
backend/backend_extraction/: __init__.py  score.py
backend/backend_others/: __init__.py  requirements.txt  score.py
backend/chunks/: Bank of America Q23.pdf_part_1  tcsreport4.pdf_part_1
backend/docs/: risk_monitoring.md
backend/llm_graph_transformer/: README.md  pyproject.toml
backend/llm_graph_transformer_lib/: README.md  pyproject.toml
backend/migrations/: env.py
backend/scripts/: bootstrap.sh
backend/shared/: common_fn.py  constants.py
backend/src/: QA_integration.py  QA_integration_new.py  QA_optimization.py  api_response.py  api_response_to_json.py  auth_middleware.py  chunkid_entities.py  communities.py  create_chunks.py  create_communities.py  database.py  diffbot_transformer.py  error_handler.py  gemini_llm.py  generate_graphDocuments.py  generate_graphDocuments_from_llm.py  graphDB_dataAccess.py  graph_query.py  groq_llama3_llm.py  integration.py  knowledge_extract.py  llm.py  llm_modified.py  local_file.py  logger.py  main.py  make_relationships.py  mcp_config.py  mcp_service.py  med_api.py  mineru_loader.py  monitoring_service.py  monitoring_service_pg.py  neighbours.py  openAI_llm.py  pdf_kg_neo.py  post_processing.py  rag_pipeline.py  ragas_eval.py  response_format.py  (+7 more)
backend/tests/: Performance_test.py  README.md  __init__.py  conftest.py  test_bill_gates_sources.py  test_chunk_extraction.py  test_commutiesqa.py  test_enhanced_source_extraction.py  test_enhanced_sources.py  test_entity_types.py  test_minimax_integration.py  test_minimax_provider.py  test_monitoring_delete.py  test_monitoring_integration.py  test_name_variations.py  test_risk_assessment.py  (+3 more)
llm_graph_transformer/: README.md  pyproject.toml  setup.py
(+524 files in other folders)
