[project]
name = "LLM_Graph_Builder_Backend"
version = "0.1.0"
description = "The Backend application API offers a scalable, efficient solution for loading, processing, and interacting with documents across different sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.6.0",
    "asyncio==3.4.3",
    "boto3==1.37.29",
    "botocore==1.37.29",
    "certifi==2025.1.31",
    "chardet==5.2.0",
    "fastapi==0.115.11",
    "fastapi-health==0.4.0",
    "google-api-core==2.24.2",
    "google-auth==2.38.0",
    "google-auth-oauthlib==1.2.1",
    "google-cloud-core==2.4.3",
    "google-cloud-logging==3.11.4",
    "graphdatascience==1.14",
    "gunicorn==23.0.0",
    "json-repair==0.39.1",
    "langchain==0.3.23",
    "langchain-anthropic==0.3.9",
    "langchain-aws==0.2.18",
    "langchain-community==0.3.19",
    "langchain-core==0.3.51",
    "langchain-experimental==0.3.4",
    "langchain-fireworks==0.2.9",
    "langchain-google-vertexai==2.0.19",
    "langchain-groq==0.2.5",
    "langchain-huggingface==0.1.2",
    "langchain-neo4j==0.4.0",
    "langchain-openai==0.3.12",
    "langchain-text-splitters==0.3.8",
    "langdetect==1.0.9",
    "langserve==0.3.1",
    "langsmith==0.3.26",
    "neo4j-rust-ext>=5.28.1.0",
    "nltk==3.9.1",
    "openai==1.71.0",
    "opencv-python==4.11.0.86",
    "pip-install==1.3.5",
    "psutil==7.0.0",
    "pydantic==2.10.6",
    "pymupdf==1.25.5",
    "pypandoc==1.15",
    "pypandoc-binary==1.15",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "ragas==0.2.14",
    "rouge-score==0.1.2",
    "secweb==1.18.1",
    "sentence-transformers==4.0.2",
    "sse-starlette==2.2.1",
    "starlette==0.46.1",
    "starlette-session==0.4.3",
    "tqdm==4.67.1",
    "unstructured-client==0.32.3",
    "unstructured-inference==0.8.10",
    "unstructured[all-docs]>=0.17.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wikipedia==1.4.0",
    "wrapt==1.17.2",
    "yarl==1.18.3",
    "youtube-transcript-api==1.0.3",
    "zipp==3.21.0",
]
